# qraf

./: .gitignore  .npmignore  CMakeLists.txt  LICENSE  README.md  package.json
benchmarks/: bench_main.cpp
include/cli/: commands.h
include/core/: error.h  logging.h  types.h
include/nn/: attention.h  backend.h  kv_cache_quant.h  lora.h  metal_backend.h  ops.h  simd_neon.h  threading.h  transformer.h
include/qraf/: format.h  loader.h  writer.h
include/runtime/: batch_scheduler.h  inference.h  model_manager.h  speculative.h  tokenizer.h
include/sampling/: sampler.h
include/server/: http_server.h
include/tensor/: quantize.h  tensor.h
npm/: cli.js  index.js  postinstall.js
paper/: qraf_whitepaper.aux  qraf_whitepaper.out  qraf_whitepaper.tex  qraf_whitepaper.toc
src/cli/: chat.cpp  commands.cpp  main.cpp  model_browser.cpp
src/core/: error.cpp  logging.cpp
src/nn/: attention.cpp  backend.cpp  lora.cpp  metal_backend.mm  metal_shaders.metal  ops.cpp  simd_neon.cpp  threading.cpp  transformer.cpp
src/qraf/: header.cpp  loader.cpp  writer.cpp
src/runtime/: inference.cpp  model_manager.cpp  speculative.cpp  tokenizer.cpp
src/sampling/: sampler.cpp
src/server/: http_server.cpp  main.cpp
src/tensor/: dtype.cpp  quantize.cpp  tensor.cpp
tests/: test_inference.cpp  test_main.cpp  test_nn_ops.cpp  test_qraf_format.cpp  test_quantize.cpp  test_sampling.cpp  test_tensor.cpp  test_tokenizer.cpp
tools/: convert_hf_to_qraf.py  dummy_model.cpp  qraf_convert.py  qraf_writer.cpp
